--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "reciprocityextension",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/b0b3rt/ReciprocityExtension#readme",
   "devDependencies": {
-    "@types/chrome": "^0.0.193"
+    "@types/chrome": "^0.0.193",
+    "typescript": "4.7.4"
   }
 }
